# Tech-Test-Contelaizer

./: README.md  pyproject.toml
text_processing/: manage.py
text_processing/pesel_app/: apps.py  models.py  urls.py  views.py
text_processing/pesel_app/templates/: index.html  result.html
text_processing/text_app/: urls.py  views.py
text_processing/text_app/templates/: index.html  result.html
text_processing/text_processing/: asgi.py  settings.py  urls.py  wsgi.py
